Documentation edits made through Mintlify web editor

--- a/features/hedge.mdx
+++ b/features/hedge.mdx
@@ -1,5 +1,6 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Hedge any market"
+description: "We optimize your entry by hedging across outcomes."
 ---
 
+Instead of committing everything to one side, Polystrat splits and distributes your position to reduce downside and improve overall coverage. One entry, structured exposure, less dependency on a single outcome.
