--- a/features/model.mdx
+++ b/features/model.mdx
@@ -1,5 +1,6 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Statistic Model"
+description: "Quantitative modeling to estimate outcome likelihood."
 ---
 
+Quantitative modeling to estimate outcome likelihood. Polystrat analyzes price targets using multiple statistical approaches and historical behavior to generate model-based probabilities. These probabilities are designed to support better decisions, not predictions — giving you a clearer sense of risk before you commit capital.
