Documentation edits made through Mintlify web editor

--- a/features/hedge.mdx
+++ b/features/hedge.mdx
@@ -4,3 +4,48 @@ description: "We optimize your entry by hedging across outcomes."
 ---
 
 Instead of committing everything to one side, Polystrat splits and distributes your position to reduce downside and improve overall coverage. One entry, structured exposure, less dependency on a single outcome.
+
+## BTC/ETH Markets
+
+By predicting BTC and ETH markets, you can choose to
+
+## Other Markets
+
+Lorem
+
+![image.png](/images/image.png)
+
+<Steps>
+  <Step title="Find your market">
+    Go to [Polymarket ](https://polymarket.com/)and open any prediction market.\
+    Once the page loads, Polystrat’s modal will appear in the top-right corner.
+
+    <Info>
+      Can’t see it? Make sure the extension is installed and you’ve completed the [Quickstart](https://polystrat.mintlify.app/quickstart) setup.
+    </Info>
+  </Step>
+  <Step title="Set your total buy amount">
+    Enter the total amount you want to allocate in the `“Bulk buy”` field.\
+    Polystrat will automatically split this amount across the outcomes you add.
+  </Step>
+  <Step title="Adding outcomes">
+    Click `“+ Add outcome”` in the top-right of the modal, or use the `“+”` icon next to an outcome’s probability.\
+    Each added outcome becomes part of your structured entry.
+
+    <Check>
+      Add as many outcomes as needed to increase coverage and improve your odds.
+    </Check>
+  </Step>
+  <Step title="Review your allocation">
+    Check how your total buy is split across outcomes.\
+    Review probabilities, exposure per outcome, and overall coverage before committing.
+  </Step>
+  <Step title="Place orders">
+    Click `“Place orders”` to confirm your entry.\
+    Polystrat will submit all orders on Polymarket and execute the split automatically across the selected outcomes.
+  </Step>
+  <Step title="Monitor your position">
+    Click `“Manage positions”` to track how each outcome evolves as the market moves.\
+    You can quickly see where you’re winning, losing, or balanced.
+  </Step>
+</Steps>
