Documentation edits made through Mintlify web editor

--- a/features/hedge.mdx
+++ b/features/hedge.mdx
@@ -5,13 +5,24 @@ description: "We optimize your entry by hedging across outcomes."
 
 Instead of committing everything to one side, Polystrat splits and distributes your position to reduce downside and improve overall coverage. One entry, structured exposure, less dependency on a single outcome.
 
+| Feature            | Description                                                                  |
+| ------------------ | ---------------------------------------------------------------------------- |
+| Bulk Buy           | Sets the total amount you want to allocate across outcomes.                  |
+| Max. (Bulk Buy)    | Uses your entire available balance for the entry.                            |
+| Find Best Outcomes | Applies a statistical model to suggest favorable outcomes on crypto markets. |
+| Remove Outcome     | Removes an outcome from your current setup.                                  |
+| Add Outcome        | Adds an outcome to your structured entry.                                    |
+| Chance to Win      | Shows the estimated probability of a positive result.                        |
+| Profit Range       | Displays the potential profit range for the current setup.                   |
+| Place Order        | Submits all orders based on your configuration.                              |
+
 ## BTC/ETH Markets
 
 By predicting BTC and ETH markets, you can choose to
 
 ## Other Markets
 
-Lorem
+On non-crypto prediction markets, Polystrat helps you improve your odds by splitting entries across multiple outcomes. Instead of relying on a single result, you increase coverage and turn uncertainty into structured positioning.
 
 ![image.png](/images/image.png)
 
@@ -26,19 +37,17 @@ Lorem
   </Step>
   <Step title="Set your total buy amount">
     Enter the total amount you want to allocate in the `“Bulk buy”` field.\
-    Polystrat will automatically split this amount across the outcomes you add.
+    Polystrat will handle the distribution automatically.
   </Step>
   <Step title="Adding outcomes">
-    Click `“+ Add outcome”` in the top-right of the modal, or use the `“+”` icon next to an outcome’s probability.\
-    Each added outcome becomes part of your structured entry.
+    Click `“+ Add outcome”` in the top-right of the modal, or use the `“+”` icon next to an outcome’s probability.
 
     <Check>
       Add as many outcomes as needed to increase coverage and improve your odds.
     </Check>
   </Step>
   <Step title="Review your allocation">
-    Check how your total buy is split across outcomes.\
-    Review probabilities, exposure per outcome, and overall coverage before committing.
+    Review how your capital is distributed, including probabilities and exposure per outcome, before committing.
   </Step>
   <Step title="Place orders">
     Click `“Place orders”` to confirm your entry.\
