Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -5,6 +5,8 @@ description: "Welcome to Polystrat, a hedge tool for people who hate losing."
 
 Polystrat helps you increase your chances of winning on prediction markets by structuring entries across multiple outcomes. Instead of committing to a single result, you spread exposure, improve coverage, and play probabilities — not guesses.
 
+![Coverps Pn](/images/coverps.png)
+
 ## Setting up
 
 No complex configuration, no learning curve. Connect, choose your market, and hedge.
