Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -20,10 +20,10 @@ No complex configuration, no learning curve. Connect, choose your market, and he
 Explore the core tools that power Polystrat and help you make more controlled decisions.
 
 <Columns cols={2}>
-  <Card title="Hedge any market" icon="money-bills-simple" href="/development">
+  <Card title="Hedge any market" icon="money-bills-simple" href="/features/hedge">
     We optimize your entry by hedging across outcomes.
   </Card>
-  <Card title="Statistical Model" icon="bitcoin-sign" href="/essentials/settings">
+  <Card title="Statistical Model" icon="bitcoin-sign" href="/features/model/">
     Quantitative modeling to estimate outcome likelihood.
   </Card>
 </Columns>
