Documentation edits made through Mintlify web editor

--- a/features/hedge.mdx
+++ b/features/hedge.mdx
@@ -3,22 +3,22 @@ title: "Hedge any market"
 description: "We optimize your entry by hedging across outcomes."
 ---
 
-Instead of committing everything to one side, Polystrat structures your entry across multiple outcomes, reducing dependency on a single result. On crypto markets, statistical models are applied to suggest the most likely outcomes and guide smarter positioning.
+You choose the outcomes, set the budget, and Polystrat handles the math, shows your upside, and executes everything in one click. 
 
-| Feature            | Description                                                                  |
-| ------------------ | ---------------------------------------------------------------------------- |
-| Bulk Buy           | Sets the total amount you want to allocate across outcomes.                  |
-| Max. (Bulk Buy)    | Uses your entire available balance for the entry.                            |
-| Find Best Outcomes | Applies a statistical model to suggest favorable outcomes on crypto markets. |
-| Remove Outcome     | Removes an outcome from your current setup.                                  |
-| Add Outcome        | Adds an outcome to your structured entry.                                    |
-| Chance to Win      | Shows the estimated probability of a positive result.                        |
-| Profit Range       | Displays the potential profit range for the current setup.                   |
-| Place Order        | Submits all orders based on your configuration.                              |
+| Feature            | Description                                                                 |
+| ------------------ | --------------------------------------------------------------------------- |
+| Bulk Buy           | Sets the total amount you want to allocate across outcomes.                 |
+| Max. (Bulk Buy)    | Uses your entire available balance for the entry.                           |
+| Find Best Outcomes | Applies statistical models to suggest favorable outcomes on crypto markets. |
+| Remove Outcome     | Removes an outcome from your current setup.                                 |
+| Add Outcome        | Adds an outcome to your structured entry.                                   |
+| Chance to Win      | Shows the estimated probability of a positive result.                       |
+| Profit Range       | Displays the potential profit range for the current setup.                  |
+| Place Order        | Submits all orders based on your configuration.                             |
 
 ## How Polystrat Works
 
-You choose the outcomes, set the budget, and Polystrat handles the math, shows your upside, and executes everything in one click. On BTC and ETH markets, an optional [Statistical Model](https://polystrat.mintlify.app/features/model) surfaces high-probability outcomes, giving you an extra edge.
+Instead of committing everything to one side, Polystrat structures your entry across multiple outcomes, reducing dependency on a single result. On crypto markets, [Statistical Models](https://polystrat.mintlify.app/features/model) are applied to suggest the most likely outcomes and guide smarter positioning.
 
 <Steps>
   <Step title="Find your market">
@@ -49,7 +49,7 @@ You choose the outcomes, set the budget, and Polystrat handles the math, shows y
     <Check>
       Add as many outcomes as needed to increase coverage and improve your odds.
     </Check>
-    When trading BTC/ETH markets, you can use "Find best outcomes" to get model-based outcome suggestions.
+    When trading BTC/ETH markets, you can use `"Find best outcomes"` to get model-based outcome suggestions.
 
     <img
       src="/images/download.png"
