--- a/features/model.mdx
+++ b/features/model.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Statistic Model"
+title: "Statistical Model"
 description: "Quantitative modeling to estimate outcome likelihood."
 ---
 
