Documentation edits made through Mintlify web editor

--- a/images/images.mdx
+++ b/images/images.mdx
@@ -6,3 +6,5 @@ description: "Description of your new file."
 ![Pswhite Pn](/images/pswhite.png)
 
 ![Psblack Pn](/images/psblack.png)
+
+![Polyfav](/images/polyfav.png)
