Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -7,34 +7,48 @@ description: "Start hedging Polymarket in minutes"
 
 From install to your first hedge in just a few clicks.
 
-### Step 1: Get access
+<Steps>
+  <Step title="Step 1: Get access">
+    <AccordionGroup>
+      <Accordion title="Get the extension" icon="download">
+        Install the Polystrat extension and connect it to Polymarket.
 
-<AccordionGroup>
-  <Accordion title="Get the extension" icon="download">
-    Install the Polystrat extension and connect it to Polymarket.
+        <Card title="Chrome Web  Store" icon="download" href="https://chromewebstore.google.com/?pli=1" cta="https://chromewebstore.google.com/?pli=1">
+          
+        </Card>
+      </Accordion>
+      <Accordion title="Apply your invite code" icon="user-check">
+        Unlock access and activate all features with your invite code.
 
-    <Card title="Chrome Web  Store" icon="download" href="https://chromewebstore.google.com/?pli=1" cta="https://chromewebstore.google.com/?pli=1">
-      
-    </Card>
-  </Accordion>
-  <Accordion title="Apply your invite code" icon="user-check">
-    Unlock access and activate all features with your invite code.
-  </Accordion>
-</AccordionGroup>
+        <Note>
+          Don't have one? [Apply for early access](https://www.polystr.at/).
+        </Note>
+      </Accordion>
+      <Accordion title="Connect your Polymarket's Magic Wallet" icon="plug">
+        Go to [polymarket.com/settings](https://polymarket.com/settings)\
+        Click “Export Private Key”\
+        Paste it into the extension to authorize Polystrat
 
-### Step 2: Place your first hedge
-
-<AccordionGroup>
-  <Accordion title="BTC/ETH markets" icon="bitcoin-sign">
-    Use Polystrat’s statistical model to structure hedged entries on crypto markets.
-  </Accordion>
-  <Accordion title="Other markets" icon="money-bill-wave">
-    Split your entry across multiple outcomes to improve coverage and winning chances.
-  </Accordion>
-</AccordionGroup>
-
-### Step 3: Invite and earn
-
-<Accordion title="Set your referral code" icon="share">
-  Invite others to Polystrat and earn from their activity.
-</Accordion>
+        <Warning>
+          **We’re temporarily supporting Magic Wallet only.**\
+          If your Polymarket account was created using an external wallet, Magic keys can’t be exported. In that case, please [create a new Polymarket account](https://polymarket.com/) using email to continue.
+        </Warning>
+      </Accordion>
+    </AccordionGroup>
+  </Step>
+  <Step title="Step 2: Place your first hedge">
+    <AccordionGroup>
+      <Accordion title="BTC/ETH markets" icon="bitcoin-sign">
+        Use Polystrat’s statistical model to structure hedged entries on crypto markets.
+      </Accordion>
+      <Accordion title="Other markets" icon="money-bill-wave">
+        Split your entry across multiple outcomes to improve coverage and winning chances.
+      </Accordion>
+    </AccordionGroup>
+  </Step>
+  <Step title="Step 3: Invite and earn">
+    <Accordion title="Set your referral code" icon="share">
+      Invite others to Polystrat and [earn from their activity.](https://docs.polystr.at/polystrat/referral)
+    </Accordion>
+  </Step>
+</Steps>
