Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -8,7 +8,7 @@ description: "Start hedging Polymarket in minutes"
 From install to your first hedge in just a few clicks.
 
 <Steps>
-  <Step title="Step 1: Get access">
+  <Step title="Get access">
     <AccordionGroup>
       <Accordion title="Get the extension" icon="download">
         Install the Polystrat extension and connect it to Polymarket.
@@ -36,7 +36,7 @@ From install to your first hedge in just a few clicks.
       </Accordion>
     </AccordionGroup>
   </Step>
-  <Step title="Step 2: Place your first hedge">
+  <Step title="Place your first hedge">
     <AccordionGroup>
       <Accordion title="BTC/ETH markets" icon="bitcoin-sign">
         Use Polystrat’s statistical model to structure hedged entries on crypto markets.
@@ -46,7 +46,7 @@ From install to your first hedge in just a few clicks.
       </Accordion>
     </AccordionGroup>
   </Step>
-  <Step title="Step 3: Invite and earn">
+  <Step title="Invite and earn">
     <Accordion title="Set your referral code" icon="share">
       Invite others to Polystrat and [earn from their activity.](https://docs.polystr.at/polystrat/referral)
     </Accordion>
