--- a/polystrat/referral.mdx
+++ b/polystrat/referral.mdx
@@ -1,3 +1,61 @@
 ---
 title: "Referral Program"
+description: "Earn passive income every time your referrals trade on Polystrat"
 ---
+
+## Revenue Share Breakdown
+
+Polystrat has a 3-level referral program. You earn a percentage of Polystrat’s net trading fee from users referred by you and by your network.
+
+## Referral Levels and Commissions
+
+### **Level 1 — Direct referrals**
+
+**30% commission**
+
+Users who sign up using your referral link.\
+You earn 30% of Polystrat’s net fee on every trade they make.
+
+Example
+
+1. Your referral trades \$10,000 in one day.
+2. Polystrat fee (1%): \$100
+3. Your earnings (30%): \$30
+
+### Level 2 — Referrals of your referrals
+
+**3% commission**
+
+Users who sign up using a Level 1 referral’s link.\
+You earn 3% of Polystrat’s net fee on every trade they make.
+
+Example
+
+1. A Level 2 user trades \$10,000.
+2. Polystrat fee: \$100
+3. Your earnings (3%): \$3
+4. Level 1 referral earns: \$30
+
+### Level 3 — Referrals of Level 2
+
+**2% commission**
+
+Users who sign up using a Level 2 referral’s link.\
+You earn 2% of Polystrat’s net fee on every trade they make.
+
+Example
+
+1. A Level 3 user trades \$10,000.
+2. Polystrat fee: \$100
+3. Your earnings (2%): \$2
+4. Level 2 referral earns: \$30
+5. Level 1 referral earns: \$3
+
+## Fee and Payout Rules
+
+Commissions are calculated from Polystrat’s net fee.\
+The base fee is 1% and may change due to discounts or promotions.
+
+<Check>
+  There is no cap on referrals or earnings. More users and more volume means higher payouts.
+</Check>
