Documentation edits made through Mintlify web editor

--- a/polystrat/fees.mdx
+++ b/polystrat/fees.mdx
@@ -2,6 +2,16 @@
 title: "Fees"
 ---
 
-**Polymarket does not charge any type of fee. **There are no fees to deposit or withdraw USDC, although intermediaries such as Coinbase, MoonPay, etc may charge transaction fees. There are no fees to trade shares in any market.
+\*\*Polymarket does not charge any type of fee. \*\*There are no fees to deposit or withdraw USDC, although intermediaries such as Coinbase, MoonPay, etc may charge transaction fees. There are no fees to trade shares in any market.
 
-**Polystrat charges ≤1% per order placed.** This fee supports the development of better quantitative strategies and helps incentivize adoption through our referral program.
+**Polystrat charges ≤1% per order placed.** This fee supports the development of better quantitative strategies and helps incentivize adoption through our [referral program](https://docs.polystr.at/polystrat/referral).
+
+## User Incentives
+
+The more volume you generate, the lower your fee. This is designed to attract and reward high-frequency traders on Polystrat.
+
+|                     |    |     |     |     |     |     |     |
+| ------------------- | --- | --- | --- | --- | --- | --- | --- |
+| Tier                | 1  | 2   | 3   | 4   | 5   | 6   | 7   |
+| Net Fee             | 1% | 95% | 87% | 85% | 80% | 77% | 75% |
+| Total Traded Volume | 0  | ~   | ~   | ~   | ~   | ~   | ~   |
