Documentation edits made through Mintlify web editor

--- a/polystrat/fees.mdx
+++ b/polystrat/fees.mdx
@@ -2,7 +2,7 @@
 title: "Fees"
 ---
 
-\*\*Polymarket does not charge any type of fee. \*\*There are no fees to deposit or withdraw USDC, although intermediaries such as Coinbase, MoonPay, etc may charge transaction fees. There are no fees to trade shares in any market.
+**Polymarket does not charge any type of fee.** There are no fees to deposit or withdraw USDC, although intermediaries such as Coinbase, MoonPay, etc may charge transaction fees. There are no fees to trade shares in any market.
 
 **Polystrat charges ≤1% per order placed.** This fee supports the development of better quantitative strategies and helps incentivize adoption through our [referral program](https://docs.polystr.at/polystrat/referral).
 
