Documentation edits made through Mintlify web editor

--- a/polystrat/fees.mdx
+++ b/polystrat/fees.mdx
@@ -10,8 +10,8 @@ title: "Fees"
 
 The more volume you generate, the lower your fee. This is designed to attract and reward high-frequency traders on Polystrat.
 
-|                     |    |     |     |     |     |     |     |
-| ------------------- | --- | --- | --- | --- | --- | --- | --- |
-| Tier                | 1  | 2   | 3   | 4   | 5   | 6   | 7   |
-| Net Fee             | 1% | 95% | 87% | 85% | 80% | 77% | 75% |
-| Total Traded Volume | 0  | ~   | ~   | ~   | ~   | ~   | ~   |
+|                         |    |       |       |       |       |       |       |
+| ----------------------- | --- | ----- | ----- | ----- | ----- | ----- | ----- |
+| **Tier**                | 1  | 2     | 3     | 4     | 5     | 6     | 7     |
+| **Net Fee**             | 1% | 0.95% | 0.87% | 0.85% | 0.80% | 0.77% | 0.75% |
+| **Total Traded Volume** | 0  | ~     | ~     | ~     | ~     | ~     | ~     |
