Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -13,7 +13,7 @@ From install to your first hedge in just a few clicks.
       <Accordion title="Get the extension" icon="download">
         Install the Polystrat extension and connect it to Polymarket.
 
-        <Card title="Chrome Web  Store" icon="download" href="https://chromewebstore.google.com/?pli=1" cta="https://chromewebstore.google.com/?pli=1">
+        <Card title="Chrome Web  Store" icon="download" href="https://chromewebstore.google.com/detail/polystrat/bljdmoemdghfaikkjabeajhmplgkddgn?hl=en-US" cta="https://chromewebstore.google.com/detail/polystrat/">
           
         </Card>
       </Accordion>
